fix(phase2): VLR gzip decompression + distinct always, prefetch lastSnapshotBefore filter isBefore, test isolation DirtiesContext, KPI schmea compat